# ad-rss-lib

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .licenseignore  .pre-commit-config.yaml  .travis.yml  404.html  =1.11.0  CHANGELOG.md  CMakeLists.txt  FAQ.md  LICENSE  LICENSE-LGPL-2.1-only  README.md  READ_ME  RELEASE_NOTES_AND_DISCLAIMERS.md  RSSCoreConfig.cmake.in  RSSCoreVersion.hpp.in  RSSModuleConfig.cmake.in  RSSModuleVersion.hpp.in  RSSSupportConfig.cmake.in  RSSSupportVersion.hpp.in  SECURITY.md  _config.yml  ad-rss-libConfig.cmake.in  ad-rss-libVersion.hpp.in  ad_rss_libConfig.cmake.in  ad_rss_libVersion.hpp.in  build.gradle  coverage.info  index.html  initialCoverage.info  mkdocs.yml  requirements.txt  search.html  sitemap.xml  testCoverage.info
ad_rss/: CMakeLists.txt  gtest-cmake.txt.in  package.xml
ad_rss/Appendix-ParameterDiscussion/: index.html
ad_rss/HLD-ArchitectureOverview/: index.html
ad_rss/HLD-KeyDesignDecisionsAndAlternatives/: index.html
ad_rss/HLD-Safety/: index.html
ad_rss/HLD-Security/: index.html
ad_rss/Overview/: index.html
ad_rss/SupportedRssFeatures/: index.html
ad_rss/UnstructuredConstellations/: index.html
ad_rss/UnstructuredScenes/: index.html
ad_rss/ad_rss_python/: index.html
ad_rss/cmake/: Config.cmake.in  Version.hpp.in
ad_rss/doc/: Doxyfile.in
ad_rss/impl/: ad_rss.cmake
ad_rss/python/: .gitignore  AdRssPython.cpp.in  AdRssPythonModule.cpp.in  CMakeLists.txt  __init__.py.in  generate_python_lib.py  generate_python_lib.py.in  local_setup.bash.in  setup.py.in
ad_rss/tests/: CMakeLists.txt  main.cpp
ad_rss_map_integration/: CMakeLists.txt  package.xml
ad_rss_map_integration/ConstructRSSConstellations/: index.html
ad_rss_map_integration/ConstructRSSScenes/: index.html
ad_rss_map_integration/HandleRoadBoundaries/: index.html
ad_rss_map_integration/Main/: index.html
ad_rss_map_integration/ad_rss_map_integration_python/: index.html
ad_rss_map_integration/cmake/: Config.cmake.in  Version.hpp.in
ad_rss_map_integration/doc/: Doxyfile.in
ad_rss_map_integration/impl/: ad_rss_map_integration.cmake
ad_rss_map_integration/python/: .gitignore  AdRssMapIntegrationPython.cpp.in  AdRssMapIntegrationPythonModule.cpp.in  CMakeLists.txt  __init__.py.in  generate_python_lib.py  generate_python_lib.py.in  python_wrapper_helper.py  setup.py.in
ad_rss_map_integration/src/: ConnectingRoutesCache.cpp  Logging.cpp  RssObjectConversion.cpp  RssObjectDataOperation.cpp  RssObjectResultListAnalyzer.cpp  RssReachableSetsCalculation.cpp  RssSceneCreation.cpp  RssSceneCreator.cpp  RssWorldModelCreation.cpp  RssWorldModelCreator.cpp
ad_rss_map_integration/test_support/: CMakeLists.txt
ad_rss_map_integration/tests/: CMakeLists.txt  RssSceneCreationTest.hpp  RssSceneCreationTestEgoSouth2EastOtherEast2North.cpp  RssSceneCreationTestEgoSouth2EastOtherEast2South.cpp  RssSceneCreationTestEgoSouth2EastOtherNorth2East.cpp  RssSceneCreationTestEgoSouth2EastOtherNorth2South.cpp  RssSceneCreationTestEgoSouth2EastOtherSouth2East.cpp  RssSceneCreationTestEgoSouth2EastOtherSouth2North.cpp  RssSceneCreationTestTown04.cpp  RssSceneCreationTests.cpp
impl/test/: CMakeLists.txt  main.cpp
python/: CMakeLists.txt  PythonWrapper.cpp  README.md  generate_python_lib.py
python/tests/: interface_test.py
tests/: CMakeLists.txt  MathUnitTestsDistanceAfterResponseTime.cpp  MathUnitTestsStoppingDistance.cpp  MathUnitTestsVelocityAfterResponseTime.cpp  RSSCheckerTests.cpp  RSSFormulaTestsCalculateDistanceAfterStatedBrakingPattern.cpp  RSSFormulaTestsCalculateDistanceAfterStatedBreakingPattern.cpp  RSSFormulaTestsCalculateSafeLongitudinalDistanceOppositeDirection.cpp  RSSFormulaTestsCalculateSafeLongitudinalDistanceSameDirection.cpp  RSSFormulaTestsCalculateSafeLongitudinalDistanceSameDirectionLeadingEgo.cpp  RSSFormulaTestsCalculateSafeLongitudinalDistanceSameDirectionLeadingOther.cpp  RSSFormulaTestsCheckVehicleState.cpp  RSSResponseCombineResponseTests.cpp  RSSResponseIsSafeTests.cpp  RSSResponseProviderTests.cpp  TestSupport.hpp
tests/ad_rss/: CMakeLists.txt
tests/check/: RSSResponseCombineResponseTests.cpp  RSSResponseCombineRssStateTests.cpp  RSSResponseIsSafeTests.cpp
tests/core/: RSSCheckerInputRangeTests.cpp  RSSCheckerTests.cpp  RSSCheckerTestsLateral.cpp  RSSCheckerTestsLongitudinal.cpp  RSSCheckerTestsOppositeDirection.cpp  RSSResponseCombineRssStateTests.cpp  RSSResponseIsSafeTests.cpp  RSSResponseProviderTests.cpp  RSSStateCombineRssStateTests.cpp  RSSStateSafeTests.cpp  RSSWorldTests.cpp  RssCheckIntersectionTests.cpp  RssCheckLateralTests.cpp  RssCheckNotRelevantTests.cpp  RssCheckObjectTests.cpp  RssCheckOppositeDirectionTests.cpp  RssCheckSameDirectionTests.cpp  RssCheckSceneTests.cpp  RssCheckTestBaseT.hpp  RssCheckTests.cpp  RssCheckTimeIndexTests.cpp  RssResponseCombineTests.cpp  RssResponseResolvingTests.cpp  RssResponseTransformationTests.cpp  RssSituationCheckingInputRangeTests.cpp  RssSituationCheckingTestsIntersectionInputRangeTests.cpp  RssSituationCheckingTestsIntersectionNoPriority.cpp  RssSituationCheckingTestsIntersectionPriority.cpp  RssSituationCheckingTestsLateral.cpp  RssSituationCheckingTestsLongitudinal.cpp  RssSituationCheckingTestsNotRelevant.cpp  RssSituationCheckingTestsOppositeDirection.cpp  RssSituationExtractionInputRangeTests.cpp  RssSituationExtractionIntersectionTests.cpp  RssSituationExtractionOppositeDirectionTests.cpp  RssSituationExtractionRelativePositionTests.cpp  RssSituationExtractionSameDirectionTests.cpp  RssSituationIdProviderTests.cpp  RssStateCombineRssStateTests.cpp  RssStateSafeTests.cpp  (+1 more)
tests/lane/: MathUnitTestsDistanceAfterResponseTime.cpp  MathUnitTestsDistanceOffsetAfterResponseTime.cpp  MathUnitTestsStoppingDistance.cpp  MathUnitTestsVelocityAfterResponseTime.cpp  RSSFormulaTestsCalculateDistanceAfterStatedBrakingPattern.cpp  RSSFormulaTestsCalculateLateralDistance.cpp  RSSFormulaTestsCalculateSafeLateralDistance.cpp  RSSFormulaTestsCalculateSafeLongitudinalDistanceOppositeDirection.cpp  RSSFormulaTestsCalculateSafeLongitudinalDistanceSameDirection.cpp  (+2 more)
(+6504 files in other folders)
